--------------------------------------------------------------------------
---------                  Ampache -- CHANGELOG                  ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.3.2-Beta3
  	- Full re-write of Localplay, MPD controller added
	- Tweaked Preferences once more
	- Added Modules Page
  	- Fixed a missing web_path reference on playlist edit page
	- Added Localplay API, check the wiki for more information
		https://ampache.bountysource.com/wiki/Localplay
  	- Added Download to Random play along with Size limitation
		usefull for downloading a set amount of music for your
		mp3 player.
  	- Fixed mime detection, wasn't strtolowering the value
	- Fixed a few more Charset issues specificaly with Russian 
		(Thx Nikk)

--------------------------------------------------------------------------
  v.3.3.2-Beta2 
  	- Fixed some Charset problems with htmlentities (Thx Nikk)
	- Fixed some issues with IE and session caching (Thx wishbone)
  	- Improved Upload Error Messages and blanked up upload and 
		quarantine directories for non-admin users
  	- Added horrible hack to make Artist sorting work in the Album 
		browse page, this is temp until Ampache 3.4
  	- Fixed a problem with the playlist update confirmation page
  	- Fixed css issues with preferences (Thx WarrenG) 
  	- Added dump album art command line script and tweaked catalog
		build display.
  	- Tweaked preferences adding tab'd views rather then all on one
		page, also added account page back in. 
  	- Fixed popen in downsample, forcing binary mode, so that windows
		works correctly (Thx SoundOfEmotion)
  	- Tweaked some defaults in .dist config file as well as the error 
		handler, in order to account for debug_level
  	- Added catalog drop down back to quick random play form
  	- Added bandwidth throttling to downloads, must be enabled in config
		(Thx pb1dft)